--- a/documentscanner/src/main/res/layout/activity_image_crop.xml
+++ b/documentscanner/src/main/res/layout/activity_image_crop.xml
@@ -170,9 +170,27 @@
                 android:paddingRight="5dp"
                 android:src="@drawable/ic_revert"
                 android:tint="#ffffff"
+                android:layout_marginStart="10dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 />
+
+        <ImageView
+                android:id="@+id/ivGray"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:paddingTop="10dp"
+                android:paddingLeft="5dp"
+                android:paddingBottom="10dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:paddingRight="5dp"
+                android:src="@drawable/ic_document_gray"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/ivColor"
+                android:layout_centerVertical="true"
+                />
+
         <ImageView
                 android:id="@+id/ivInvert"
                 android:layout_width="50dp"
@@ -183,19 +201,36 @@
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
                 android:paddingRight="5dp"
+                android:layout_marginEnd="10dp"
                 android:tint="#ffffff"
                 android:src="@drawable/ic_black_white"
-                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@id/ivColor"
                 android:layout_centerVertical="true"
+                />
+
+        <ImageView
+                android:id="@+id/ivColor"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:paddingTop="10dp"
+                android:paddingLeft="5dp"
+                android:paddingBottom="10dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:paddingRight="5dp"
+                android:src="@drawable/ic_document_color"
+                android:layout_centerInParent="true"
                 />
 
     </RelativeLayout>
 
     <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerInParent="true"
             android:background="#00ffffff"
-    />
+            android:indeterminateTint="@color/colorGrey"
+
+            />
 </RelativeLayout>
