Setup ability to hide edit buttons

--- a/documentscanner/src/main/res/layout/activity_image_crop.xml
+++ b/documentscanner/src/main/res/layout/activity_image_crop.xml
@@ -113,7 +113,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/bottom_shadow"
-            android:layout_alignTop="@+id/bottom_shadow">
+            android:layout_alignTop="@+id/bottom_shadow"
+            >
 
 
 <!--        <Button-->
